--- a/velibnroses/velibnroses/Base.lproj/MainStoryboard.storyboard
+++ b/velibnroses/velibnroses/Base.lproj/MainStoryboard.storyboard
@@ -4,10 +4,10 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
     <scenes>
-        <!--Navigation Controller - Main-->
+        <!--Navigation Controller-->
         <scene sceneID="D9f-GM-kd8">
             <objects>
-                <navigationController title="Main" definesPresentationContext="YES" id="SBZ-qn-Jb4" sceneMemberID="viewController">
+                <navigationController definesPresentationContext="YES" id="SBZ-qn-Jb4" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="nxb-eS-038">
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -17,18 +17,18 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PLT-Kz-m19" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="351" y="32"/>
+            <point key="canvasLocation" x="347" y="32"/>
         </scene>
         <!--Map Controller-->
         <scene sceneID="zyg-xC-811">
             <objects>
                 <viewController id="R2K-lh-zEE" customClass="MapController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Xpv-kR-8Ki">
-                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" id="QIt-AM-94y">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="416"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <connections>
                                     <outlet property="delegate" destination="R2K-lh-zEE" id="6qq-j7-0P0"/>
@@ -201,7 +201,7 @@
                     <navigationItem key="navigationItem" id="hmS-dC-JVN">
                         <barButtonItem key="leftBarButtonItem" image="Images/NavigationBar/NBInfo.png" id="lbv-EE-UWT">
                             <connections>
-                                <segue destination="tZ9-pt-7Wc" kind="modal" id="cYT-AZ-jws"/>
+                                <segue destination="mZx-XO-NyK" kind="push" id="dt9-Xg-diD"/>
                             </connections>
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" image="Images/NavigationBar/NBSearch.png" id="Dwx-k2-M2a">
@@ -227,47 +227,38 @@
             </objects>
             <point key="canvasLocation" x="803" y="32"/>
         </scene>
-        <!--Navigation Controller - Info-->
-        <scene sceneID="uYZ-CS-on6">
-            <objects>
-                <navigationController title="Info" definesPresentationContext="YES" id="tZ9-pt-7Wc" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="HHE-g6-wp7">
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <connections>
-                        <segue destination="bvp-23-NgP" kind="relationship" relationship="rootViewController" id="wwX-Kq-lTd"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="JhP-nQ-I0E" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1287" y="32"/>
-        </scene>
         <!--Info Controller-->
-        <scene sceneID="dm3-0m-aSt">
+        <scene sceneID="DJc-Ks-pak">
             <objects>
-                <viewController id="bvp-23-NgP" customClass="InfoController" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="jQW-Ab-Pvt">
-                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                <viewController id="mZx-XO-NyK" customClass="InfoController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="zTG-hz-Ftm">
+                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" image="Images/InfoPanel/IPContent.png" id="dyJ-RV-8n7">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="441"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            </imageView>
+                        </subviews>
                     </view>
-                    <navigationItem key="navigationItem" id="z6X-Rv-N35">
-                        <barButtonItem key="leftBarButtonItem" image="Images/NavigationBar/NBBack.png" id="fU2-59-jYH">
+                    <navigationItem key="navigationItem" id="PnZ-q7-OJc">
+                        <barButtonItem key="leftBarButtonItem" image="Images/NavigationBar/NBBack.png" id="K2C-dy-2tc">
                             <connections>
-                                <action selector="backBarButtonClicked:" destination="bvp-23-NgP" id="O6e-3P-hBd"/>
+                                <action selector="backBarButtonClicked:" destination="mZx-XO-NyK" id="8wJ-xD-br6"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="backBarButton" destination="fU2-59-jYH" id="IW7-5g-Ceb"/>
+                        <outlet property="backBarButton" destination="K2C-dy-2tc" id="Gom-pg-78P"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="fmj-fu-8Gx" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LYB-5i-1bQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1756" y="32"/>
+            <point key="canvasLocation" x="1276" y="32"/>
         </scene>
     </scenes>
     <resources>
+        <image name="Images/InfoPanel/IPContent.png" width="16" height="16"/>
         <image name="Images/NavigationBar/NBBack.png" width="16" height="16"/>
         <image name="Images/NavigationBar/NBInfo.png" width="16" height="16"/>
         <image name="Images/NavigationBar/NBSearch.png" width="16" height="16"/>
@@ -311,6 +302,6 @@
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
-        <simulatedScreenMetrics key="destination" type="retina4"/>
+        <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
 </document>
