--- a/velibnroses/velibnroses/Base.lproj/MainStoryboard.storyboard
+++ b/velibnroses/velibnroses/Base.lproj/MainStoryboard.storyboard
@@ -235,7 +235,7 @@
                         <rect key="frame" x="0.0" y="64" width="320" height="416"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" image="Images/InfoPanel/IPContent.png" id="dyJ-RV-8n7">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" id="dyJ-RV-8n7">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="441"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </imageView>
@@ -250,6 +250,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="backBarButton" destination="K2C-dy-2tc" id="Gom-pg-78P"/>
+                        <outlet property="contentImage" destination="dyJ-RV-8n7" id="paI-Un-ucJ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LYB-5i-1bQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -258,7 +259,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Images/InfoPanel/IPContent.png" width="16" height="16"/>
         <image name="Images/NavigationBar/NBBack.png" width="16" height="16"/>
         <image name="Images/NavigationBar/NBInfo.png" width="16" height="16"/>
         <image name="Images/NavigationBar/NBSearch.png" width="16" height="16"/>
@@ -273,11 +273,13 @@
             <relationships>
                 <relationship kind="action" name="backBarButtonClicked:"/>
                 <relationship kind="outlet" name="backBarButton" candidateClass="UIBarButtonItem"/>
+                <relationship kind="outlet" name="contentImage" candidateClass="UIImageView"/>
             </relationships>
         </class>
         <class className="MapController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/MapController.h"/>
             <relationships>
+                <relationship kind="action" name="backBarButtonClicked:"/>
                 <relationship kind="action" name="bikeIconClicked:"/>
                 <relationship kind="action" name="cancelBarButtonClicked:"/>
                 <relationship kind="action" name="searchBarButtonClicked:"/>
