--- a/velibnroses/velibnroses/Base.lproj/MainStoryboard.storyboard
+++ b/velibnroses/velibnroses/Base.lproj/MainStoryboard.storyboard
@@ -51,6 +51,7 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="words" autocorrectionType="no" returnKeyType="next"/>
                                         <connections>
+                                            <action selector="arrivalFieldChanged:" destination="R2K-lh-zEE" eventType="editingChanged" id="TeE-rl-vGp"/>
                                             <outlet property="delegate" destination="R2K-lh-zEE" id="y66-k7-vvc"/>
                                         </connections>
                                     </textField>
@@ -67,6 +68,7 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="words" autocorrectionType="no" returnKeyType="next"/>
                                         <connections>
+                                            <action selector="departureFieldChanged:" destination="R2K-lh-zEE" eventType="editingChanged" id="Fek-b7-p4B"/>
                                             <outlet property="delegate" destination="R2K-lh-zEE" id="hdx-X0-x9z"/>
                                         </connections>
                                     </textField>
@@ -288,9 +290,6 @@
         <image name="Images/SearchPanel/SPStand.png" width="16" height="16"/>
     </resources>
     <classes>
-        <class className="ADClusterMapView" superclassName="MKMapView">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ADClusterMapView.h"/>
-        </class>
         <class className="InfoController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/InfoController.h"/>
             <relationships>
@@ -302,9 +301,11 @@
         <class className="MapController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/MapController.h"/>
             <relationships>
+                <relationship kind="action" name="arrivalFieldChanged:"/>
                 <relationship kind="action" name="backBarButtonClicked:"/>
                 <relationship kind="action" name="bikeIconClicked:"/>
                 <relationship kind="action" name="cancelBarButtonClicked:"/>
+                <relationship kind="action" name="departureFieldChanged:"/>
                 <relationship kind="action" name="searchBarButtonClicked:"/>
                 <relationship kind="action" name="searchButtonClicked:"/>
                 <relationship kind="action" name="standIconClicked:"/>
@@ -320,7 +321,7 @@
                 <relationship kind="outlet" name="departureLocation" candidateClass="UIButton"/>
                 <relationship kind="outlet" name="departureSpinner" candidateClass="UIActivityIndicatorView"/>
                 <relationship kind="outlet" name="infoBarButton" candidateClass="UIBarButtonItem"/>
-                <relationship kind="outlet" name="mapPanel" candidateClass="ADClusterMapView"/>
+                <relationship kind="outlet" name="mapPanel" candidateClass="MKMapView"/>
                 <relationship kind="outlet" name="searchBarButton" candidateClass="UIBarButtonItem"/>
                 <relationship kind="outlet" name="searchButton" candidateClass="UIButton"/>
                 <relationship kind="outlet" name="searchPanel" candidateClass="UIView"/>
